--- a/styles/pages/_index.scss
+++ b/styles/pages/_index.scss
@@ -139,9 +139,13 @@
 	position: relative;
 	margin-top: 25px;
 	padding: 20px;
+	border: none;
 	border-radius: 15px;
+	text-align: left;
 	text-decoration: none;
 	font-size: 1.6em;
+	z-index: 1;
+	cursor: pointer;
 	color: rgb(0, 0, 0);
 	background-color: $background-secondary;
 	// background-color: rgb(69, 30, 177);
@@ -166,12 +170,34 @@
 	}
 
 	&:hover {
-		background-color: #f5edff;
+		&::after {
+			opacity: 1;
+		}
 	}
 
 	&:hover i {
 		color: #9356dc;
 	}
+
+	&::after {
+		content: '';
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		opacity: 0;
+		z-index: -1;
+		transition: opacity .3s;
+		border-radius: 15px;
+		background-color: #f5edff;
+	}
+
+	// &::after {
+	// 	content: ;
+	// 	position: absolute;
+	// 	background-color: green;
+	// }
 }
 
 
