--- a/styles/pages/_index.scss
+++ b/styles/pages/_index.scss
@@ -4,9 +4,9 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	position: absolute;
+	position: fixed;
 	animation: loader 0s linear 3s forwards;
-	z-index: 1;
+	z-index: 2;
 	background-color: #9356dc;
 }
 
