--- a/styles/styles.css
+++ b/styles/styles.css
@@ -70,9 +70,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
   animation: loader 0s linear 3s forwards;
-  z-index: 1;
+  z-index: 2;
   background-color: #9356dc;
 }
 
