--- a/styles/pages/_index.scss
+++ b/styles/pages/_index.scss
@@ -67,13 +67,18 @@
 	@include flexCenter(center, center);
 	margin: auto;
 	box-shadow: 0px 2px 6px #bcbcbc inset;
-	font-size: 1.3em;
+	font-size: 1.4em;
+	font-weight: 700;
 	color: $color-fourthy;
 	background-color: rgb(234, 234, 234);
 
 	i {
-		margin-right: 8px;
+		margin-right: 10px;
 		font-size: 1.1em;
+	}
+	
+	p {
+		margin-right: 50px;
 	}
 }
 
@@ -89,14 +94,14 @@
 
 	h1 {
 		width: 250px;
-		font-size: 2.2em;
+		font-size: 2.5em;
 		text-align: center;
 	}
 
 	p {
 		width: 300px;
 		margin-top: 10px;
-		font-size: 1.6em;
+		font-size: 1.7em;
 		text-align: center;
 		color: rgb(102, 102, 102);
 	}
@@ -163,6 +168,7 @@
 	text-align: left;
 	text-decoration: none;
 	font-size: 1.6em;
+	font-weight: 700;
 	z-index: 1;
 	cursor: pointer;
 	color: rgb(0, 0, 0);
@@ -269,6 +275,22 @@
 		}
 	}
 
+	&:nth-child(2) .img-card {
+		object-position: 50% 100%;
+	}
+
+	&:nth-child(3) .img-card {
+		object-position: 50% 60%;
+	}
+
+	&:nth-child(4) .img-card {
+		object-position: 50% 100%;
+	}
+
+	&:nth-child(5) .img-card {
+		object-position: 50% 100%;
+	}
+
 	.text-container {
 		width: 100%;
 		height: 70px;
@@ -292,7 +314,7 @@
 
 		.heart {
 			font-size: 2.2em;
-			margin-right: 50px;
+			margin-right: 25px;
 			position: relative;
 
 
@@ -319,4 +341,8 @@
 			}
 		}
 	}
+}
+
+.restaurants a .card-restaurant:nth-child(2) {
+	color: #fff;
 }
