--- a/styles/styles.css
+++ b/styles/styles.css
@@ -128,13 +128,17 @@ body {
   align-items: center;
   margin: auto;
   box-shadow: 0px 2px 6px #bcbcbc inset;
-  font-size: 1.3em;
+  font-size: 1.4em;
+  font-weight: 700;
   color: rgb(53, 53, 53);
   background-color: rgb(234, 234, 234);
 }
 .location i {
-  margin-right: 8px;
+  margin-right: 10px;
   font-size: 1.1em;
+}
+.location p {
+  margin-right: 50px;
 }
 
 .book {
@@ -149,13 +153,13 @@ body {
 }
 .book h1 {
   width: 250px;
-  font-size: 2.2em;
+  font-size: 2.5em;
   text-align: center;
 }
 .book p {
   width: 300px;
   margin-top: 10px;
-  font-size: 1.6em;
+  font-size: 1.7em;
   text-align: center;
   color: rgb(102, 102, 102);
 }
@@ -217,6 +221,7 @@ body {
   text-align: left;
   text-decoration: none;
   font-size: 1.6em;
+  font-weight: 700;
   z-index: 1;
   cursor: pointer;
   color: rgb(0, 0, 0);
@@ -312,6 +317,18 @@ body {
   color: rgb(0, 135, 102);
   background-color: rgb(153, 226, 208);
 }
+.card-restaurant:nth-child(2) .img-card {
+  object-position: 50% 100%;
+}
+.card-restaurant:nth-child(3) .img-card {
+  object-position: 50% 60%;
+}
+.card-restaurant:nth-child(4) .img-card {
+  object-position: 50% 100%;
+}
+.card-restaurant:nth-child(5) .img-card {
+  object-position: 50% 100%;
+}
 .card-restaurant .text-container {
   width: 100%;
   height: 70px;
@@ -332,7 +349,7 @@ body {
 }
 .card-restaurant .text-container .heart {
   font-size: 2.2em;
-  margin-right: 50px;
+  margin-right: 25px;
   position: relative;
 }
 .card-restaurant .text-container .heart i {
@@ -352,6 +369,10 @@ body {
 }
 .card-restaurant .text-container .heart:hover i:nth-child(2) {
   transform: scale(1);
+}
+
+.restaurants a .card-restaurant:nth-child(2) {
+  color: #fff;
 }
 
 .img-section {
